<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Weather Now</string>
    <string name="signup_toolbar_title">Completá tus datos</string>
    <string name="login_options_toolbar_title">Ingresar con</string>
    <string name="search_hint">Buscar ciudad..</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Cerrar navigation drawer</string>
    <string name="menu_weather">Clima</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_settings">Configuración</string>
    <string name="menu_query_developer">Consulta al desarrollador</string>
    <string name="menu_app_version">Version: <b>v1.0</b></string>
    <string name="menu_logout">Salir</string>
    <string name="activity_search_edit_text_hint">Ingrese la ciudad a buscar</string>
    <string name="weather_screen_last_update_date_textview">Ultima actualización:</string>
    <string name="weather_screen_daily_weather_list_textview">Pronóstico diario</string>
    <string name="app_network_status_without_connection_textview">Sin conexión a internet</string>
    <string name="app_network_status_recovered_connection_textview">De nuevo en línea</string>
    <string name="settings_screen_language_title_textview">Idioma</string>
    <string name="settings_screen_language_spanish_textview">Español</string>
    <string name="settings_screen_language_english_textview">Inglés</string>
    <string name="settings_screen_temperature_unit_title_textview">Unidad de temperatura</string>
    <string name="settings_screen_temperature_unit_celsius_textview">°C</string>
    <string name="settings_screen_temperature_unit_fahrenheit_textview">°F</string>
    <string name="settings_screen_app_notifications_title_textview">Notificaciones</string>
    <string name="settings_screen_app_notifications_enabled_textview">¿Habilitar notificaciones?</string>
    <string name="settings_screen_app_notifications_schedule_textview">Horario de notificación:</string>
    <string name="save_data_button">Guardar</string>
    <string name="input_password_hint">Ingresa tu clave…</string>
    <string name="profile_screen_password_title_textview">Clave</string>
    <string name="input_lastname_hint">Ingresa tu apellido..</string>
    <string name="profile_screen_lastname_title_textview">Apellido</string>
    <string name="profile_screen_name_title_textview">Nombre</string>
    <string name="input_name_hint">Ingresa tu nombre..</string>
    <string name="profile_screen_email_title_textview">E-mail</string>
    <string name="profile_image_title_textview">Imágen de perfil</string>
    <string name="login_user_button_text">Ingresar</string>
    <string name="login_password_hint">Clave</string>
    <string name="login_password_title_textview">Ahora, tu clave</string>
    <string name="login_email_option_button_text">E-mail</string>
    <string name="login_google_option_button_text">Google</string>
    <string name="login_continue_email_option_button_text">Continuar</string>
    <string name="login_email_hint">E-mail</string>
    <string name="login_email_title_textview">¡Hola! Para seguir, por favor ingresa tu e-mail</string>
    <string name="dialog_registering_user_message_text">Registrando usuario…</string>
    <string name="dialog_signin_user_message_text">Iniciando sesión…</string>
    <string name="dialog_logout_user_message_text">Cerrando sesión…</string>
    <string name="splash_screen_signup_user_button_text">Regístrate</string>
    <string name="splash_screen_login_user_button_text">Ingresar</string>
    <string name="splash_screen_title_message_textview">Ingresa o regístrate en Weather Now</string>
    <string name="input_email_hint">Ingresa tu e-mail…</string>
    <string name="signup_screen_register_user_button_text">Registrarme</string>
    <string name="signup_screen_required_fields_reference_text_view">* Campos obligatorios</string>
    <string name="signup_screen_password_title_textview">Clave</string>
    <string name="signup_screen_email_title_textview">E-mail</string>
    <string name="signup_screen_lastname_title_textview">Apellido</string>
    <string name="signup_screen_name_title_textview">Nombre</string>
    <string name="action_search">Buscar</string>
    <string name="menu_select_media_source">Seleccione la fuente</string>
    <string name="menu_capture_image">Tomar foto</string>
    <string name="menu_pick_from_image_gallery">Galeria</string>
    <string name="action_clear_text">Limpiar texto</string>
    <string name="action_back_splash">Volver</string>
    <string name="consult_developer_email_extra_subject_text">[Consulta] Aplicacion Android WeatherNow</string>
    <string name="consult_developer_email_intent_chooser_title">Elige un cliente de correo</string>
    <string name="refresh_server_data_button_message">Actualizar</string>
    <string name="update_server_data_no_internet_connection_message">No se pueden actualizar los datos del servidor. Comprueba tu conexión a internet.</string>
    <string name="retrieve_server_data_no_internet_connection_message">No estás conectado. Comprueba la conexión.</string>
    <string name="wrong_searched_city_length_message">La ciudad buscada debe contener como minimo 4 (cuatro) caracteres.</string>
    <string name="default_notification_channel_id">weather_now_channel_id</string>
    <string name="default_notification_channel_name">weather_now_channel_name</string>
    <string name="default_notification_channel_description">weather_now_channel_description</string>
    <string name="app_notifications_schedule_time_updated_message">Horario de notificación actualizado.</string>
    <string name="notitication_user_greet_time_day_language_spanish">Buenos días</string>
    <string name="notitication_user_greet_time_day_language_english">Good morning</string>
    <string name="notitication_user_greet_time_afternoon_language_spanish">Buenas tardes</string>
    <string name="notitication_user_greet_time_afternoon_language_english">Good afternoon</string>
    <string name="notitication_user_greet_time_night_language_spanish">Buenas noches</string>
    <string name="notitication_user_greet_time_night_language_english">Good night</string>
    <string name="notitication_current_temp_pre_message_language_spanish">"Ahora "</string>
    <string name="notitication_current_temp_pre_message_language_english">"Now "</string>
    <string name="notitication_current_max_and_min_temp_pre_message_language_spanish">"Hoy "</string>
    <string name="notitication_current_max_and_min_temp_pre_message_language_english">"Today "</string>
    <string name="notitication_connector_in_language_spanish">"en "</string>
    <string name="notitication_connector_in_language_english">"in "</string>
    <string name="foreground_channel_id">foreground_channel_id</string>
    <string name="network_disconnected_view_message_title">Conéctate a internet</string>
    <string name="network_disconnected_view_message_subtitle">No estás conectado. Comprueba la conexión.</string>
    <string name="profile_screen_reference_message_text_view">Edita los datos del usuario y presiona Guardar</string>
    <string name="dialog_updating_user_data_message_text">Actualizando datos del usuario…</string>
    <string name="user_data_updated_successfully_message">Los datos del usuario fueron actualizados con éxito.</string>
    <string name="settings_changed_not_connection_message_text_view">Estás sin conexion. Los cambios se veran reflejados cuando se reestablezca la misma.</string>
    <string name="dialog_searching_city_message_text">Buscando datos de la ciudad…</string>
    <string name="no_city_data_found_from_internet_message">No se encontraron datos para la ciudad buscada.</string>
    <string name="dialog_updating_notification_time_message_text">Actualizando horario de notificación…</string>
    <string name="dialog_enabling_notifications_message_text">Habilitando notificaciones…</string>
    <string name="app_notifications_enabled_message">Notificaciones habilitadas.</string>
    <string name="dialog_disabling_notifications_message_text">Deshabilitando notificaciones…</string>
    <string name="app_notifications_disabled_message">Notificaciones deshabilitadas.</string>
</resources>