<layout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".views.login_screens.LoginOptionsFragment">

    <ImageView
        android:layout_width="525dp"
        android:layout_height="500dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-40dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="-40dp"
        android:alpha="0.12"
        android:src="@mipmap/cloud_sun_solid_blurred"
        />

    <Button
        android:id="@+id/btnLoginGoogleOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_google_option_button_text"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:background="@drawable/button_with_border_radius"
        android:backgroundTint="@color/colorWhite"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:layout_margin="16dp"
        android:paddingStart="10dp"
        android:paddingEnd="34dp"
        android:drawableStart="@drawable/ic_google_icon"
        android:clickable="true"
        android:focusable="true"
        />

    <Button
        android:id="@+id/btnLoginEmailOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_email_option_button_text"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_with_border_radius"
        android:backgroundTint="@color/colorPrimaryDark"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:paddingStart="10dp"
        android:paddingEnd="34dp"
        android:drawableStart="@drawable/ic_email_icon"
        android:layout_below="@id/btnLoginGoogleOption"
        android:clickable="true"
        android:focusable="true"
        />

    <RelativeLayout
        android:id="@+id/login_screen_network_status_view"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_alignParentBottom="true"
        android:visibility="gone">

        <TextView
            android:id="@+id/login_screen_network_status_view_text_view"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:background="@color/colorRedMD700"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="@color/colorWhite"
            android:text="@string/app_network_status_without_connection_textview"
            />

    </RelativeLayout>

</RelativeLayout>
</layout>