<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.startup_screen.StartupActivity"
    android:background="@color/colorPrimary">

    <ImageView
        android:layout_width="525dp"
        android:layout_height="420dp"
        android:layout_marginStart="-40dp"
        android:layout_marginEnd="-40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="54dp"
        android:alpha="0.12"
        android:src="@drawable/ic_cloud_sun_solid"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/splash_screen_title_message_textview"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginBottom="14dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            />

        <Button
            android:id="@+id/btnSigninSplashScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/splash_screen_login_user_button_text"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_with_border_radius"
            android:backgroundTint="@color/colorPrimaryDark"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:onClick="goToLoginActivity"
            android:layout_below="@id/textView1"
            />

        <Button
            android:id="@+id/btnSignupSplashScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/splash_screen_signup_user_button_text"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:background="@drawable/button_with_border_radius"
            android:backgroundTint="@color/colorWhite"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:onClick="goToSignupActivity"
            android:layout_below="@id/btnSigninSplashScreen"
            />

    </RelativeLayout>

</RelativeLayout>
